ficed issue with scholar.scss causing next item to shift right.

--- a/_sass/includes/scholar.scss
+++ b/_sass/includes/scholar.scss
@@ -5,16 +5,25 @@
         margin-bottom: 15px;
     }
     .scholar-item {
+	display: grid;
         margin-bottom: 20px;
+	justify-content: space-between;
+	grid-template-columns: 1fr 1fr;
         .sl {
             @include body-text;
-	    float: left;
-            
+	    text-align: left;
+            display: inline;
+            .name{
+		font-weight: bold;
+	    }
         }
 	.sr {
             @include body-text;
-	    float: right;
-            
+	    text-align: right;
+            .name{
+		font-weight: bold;
+		display: inline;
+	    }
         }
 
     }
